fix: add some extra margin top to fleet cards

--- a/src/components/image-card/ImageCard.component.scss
+++ b/src/components/image-card/ImageCard.component.scss
@@ -59,7 +59,10 @@
     
     .card {
         margin: 10px 25px;
+      
         &__image-container {
+            margin-bottom: 40px;
+            margin-top: 20px;
             height: 150px;
         }
     }
